# fm-case-service

./: .env.example  .gitignore  AGENT_PORTING_INSTRUCTIONS.md  AGENT_TASK.txt  AUTO_DOCS_POC_SUMMARY.md  CHANGES_SUMMARY.txt  DATA_MODEL_VERIFICATION_REPORT.md  Dockerfile  ENUM_CORRECTION_NOTES.md  README.md  README_FOR_AGENT.md  README_TEMPLATE.md  RESTORATION_COMPLETE.md  SERVICE_EXTRACTION_MAP.md  TASK_FOR_AGENT.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml  test_endpoints.sh  verify_compliance.py
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  sync-to-enterprise.yml
alembic/: README.md  env.py
alembic/versions/: 20250107_initial_schema.py  20250208_initial_hybrid_schema.py
config/: service-public-key.pem
data/: create_db.py  init_schema.sql  test_case_creation.py  verify_schema.py
docs/api/: openapi.json  openapi.yaml
hybrid-template-upgrade/: README.md  SUMMARY.md  generate_readme.py  workflow-paths-addition.txt
hybrid-template-upgrade/fm-agent-service/: README_TEMPLATE.md
hybrid-template-upgrade/fm-api-gateway/: README_TEMPLATE.md
hybrid-template-upgrade/fm-auth-service/: README_TEMPLATE.md  generate_readme.py
migrations/: 001_initial_hybrid_schema.sql
patches/: fm-agent-service.patch  fm-api-gateway.patch  fm-auth-service.patch  fm-evidence-service.patch  fm-knowledge-service.patch  fm-session-service.patch
reference/: case-and-session-concepts.md
reference/monolith/: case.py  case_ui.py
scripts/: generate_readme.py
src/case_service/: main.py
src/case_service/models/: case.py  (+2 more)
tests/unit/: test_health.py
(+12 files in other folders)
